--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <title>Brett's Demo HTML </title>
 <header> Hello World </header>
 <h1>Hi there</h1>
-<p>New text, lorie ispn bacon</p>
+<p>New text, lorie ispn bacnnon</p>
 </html>
