--- a/index.html
+++ b/index.html
@@ -1,51 +1,7 @@
 <html>
 <title>Brett's Github Javascript - Home Page</title>
 <head>
-
-	<style type="text/css">
-		#square {
-			margin-top: 20px;
-			margin-left: 100px;
-			height: 200px;
-			width: 200px;
-			background: orange;
-		}
-		div {
-			margin-bottom: 20px;
-		}
-		.round {
-			border-radius: 20px;
-		}
-		#square:hover{
-			cursor: pointer;
-		}
-		
-	</style>
-	</head>
-<header> Hello World </header>
-<h1>Hi there</h1>
 <body>
-
-<div id="test" class="t_class"></div>
-
-<script>
-document.getElementById("test").innerHTML = "Hello by ID";
-// document.getElementsByTagName("div")[0].innerHTML = "Hello by Tag";
-// document.getElementsByClassName("t_class")[0].innerHTML = "Hello by Class";
-</script>
-<div id="square" onclick="show_sentence()"></div>
-
-	<div>
-		<p> Hello, this is inside a PPPPP tag. </p>
-	</div>
-
-	<!-- for your exercise, comment this line out.  -->
-	<!-- <button onclick="show_sentence()">Put the Sentence</button> -->
-
-<script>
-function show_sentence(){
-	document.getElementById("square").innerHTML = document.getElementsByTagName("p")[0].innerHTML;
-}
-</script>
-
+<p>Hello my name is Brett Reisman, <input type="button" onclick="location.href='https://umdbrett.github.io/js.html';" value="You can click this to go to the javascript intro" /></p>
+</body>
 </html>
