--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <head>
 <body>
 <p>Hello my name is Brett Reisman, <input type="button" onclick="location.href='https://umdbrett.github.io/js.html';" value="You can click this to go to the javascript intro"/></p>
+<hr></hr>
+<p>Assignment 1: Javascript Practice -- Objects</p>
+<p><input type="button" onclick="location.href='https://umdbrett.github.io/jsobject.html';" value="Click Here"/>
 </body>
 </html>
