--- a/jsobject.html
+++ b/jsobject.html
@@ -1,5 +1,17 @@
 <html>
 	<head>
+		<style>
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+</style>
 		<title>Brett's Github Javascript - Javascript Objects</title>
 		<link rel="stylesheet" href="https://umdbrett.github.io/main-php.css">
 		<script>
