--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 <hr></hr>
 <p>Assignment 1: Javascript Practice -- Objects</p>
 <p><input type="button" onclick="location.href='https://umdbrett.github.io/jsobject.html';" value="Click Here"/>
+<hr></hr>
+<p>Assignment 2: Javascript Practice -- Add Basic Statistics</p>
+<p><input type="button" onclick="location.href='https://umdbrett.github.io/jsstats.html';" value="Click Here"/>
 </body>
 </html>
