--- a/jsobject.html
+++ b/jsobject.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
 		<style>
-table {
+/*table {
     border-collapse: collapse;
     width: 100%;
-}
+}*/
 
 th, td {
     padding: 8px;
