--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>Brett's Github Javascript - Home Page</title>
 <head>
 <body>
-<p>Hello my name is Brett Reisman, <input type="button" onclick="location.href='https://umdbrett.github.io/js.html';" value="You can click this to go to the javascript intro"/></p>
+<p>Hello my name is Brett Reisman, <input type="button" onclick="location.href='https://umdbrett.github.io/js.html';" value="You can click this to go to the javascript intro"/>, <input type="button" onclick="location.href='https://github.com/umdbrett/umdbrett.github.io';" value="Click Here To Access 377 Github Folder"/></p>
 <hr></hr>
 <p>Assignment 1: Javascript Practice -- Objects</p>
 <p><input type="button" onclick="location.href='https://umdbrett.github.io/jsobject.html';" value="Click Here"/>
