--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <hr></hr>
 <p>Assignment 2: Javascript Practice -- Add Basic Statistics</p>
 <p><input type="button" onclick="location.href='https://umdbrett.github.io/jsstats.html';" value="Click Here"/>
+<hr></hr>
+<p>Assignment 3: Javascript Practice -- Hide Rows and Add Basic Statistics</p>
+<p><input type="button" onclick="location.href='https://umdbrett.github.io/table_manager.html';" value="Click Here"/>
 </body>
 </html>
